kustomizations/traefik/staging/ingress-route-dashboard.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: default
spec:
  routes:
    - kind: Rule
      match: Host(`traefik.nonprod.allanshomelab.com`)
