kustomizations/traefik/staging/ingress-route-services.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-service-ingresses
  namespace: default
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argocd.nonprod.allanshomelab.com`)
      kind: Rule
      middlewares:
        - name: traefik-custom-headers
          namespace: default
      priority: 10
      services:
        - name: argocd-server
          namespace:  argocd
          port: 443
          scheme: https        
  tls:
    secretName: production-tls
