kustomizations/traefik/staging/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-service-ingresses
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`cloud.nonprod.allanshomelab.com`)
      kind: Rule
      middlewares:
        - name: traefik-custom-headers
          namespace: default
      priority: 10
      services:
        - name: nextcloud
          namespace: nextcloud
          port: 8080
          scheme: http 
    - match: Host(`dns.nonprod.allanshomelab.com`)
      kind: Rule
      middlewares:
        - name: traefik-custom-headers
          namespace: default
      priority: 10
      services:
        - name: pihole-web
          namespace: pihole
          port: 80
          scheme: http 
    - match: Host(`grafana.nonprod.allanshomelab.com`)
      kind: Rule
      middlewares:
        - name: traefik-custom-headers
          namespace: default
      priority: 10
      services:
        - name: kube-prometheus-stack-grafana
          namespace: kube-prometheus-stack
          port: 80
          scheme: http 
    - match: Host(`homepage.nonprod.allanshomelab.com`)
      kind: Rule
      middlewares:
        - name: traefik-custom-headers
          namespace: default
      priority: 10
      services:
        - name: homepage
          namespace: default
          port: 3000
          scheme: http 
    - match: Host(`argocd.nonprod.allanshomelab.com`)
      kind: Rule
      middlewares:
        - name: traefik-custom-headers
          namespace: default
      priority: 10
      services:
        - name: argocd-server
          namespace: argocd
          port: 443
          scheme: https     
    - match: Host(`tautulli.nonprod.allanshomelab.com`)
      kind: Rule
      middlewares:
        - name: traefik-custom-headers
          namespace: default
      priority: 10
      services:
        - name: tautulli
          namespace: tautulli
          port: 8181
          scheme: http     
    - match: Host(`ngb-api.nonprod.allanshomelab.com`)
      kind: Rule
      middlewares:
        - name: traefik-custom-headers
          namespace: default
      priority: 10
      services:
        - name: no-geeks-brewing-graphql-api
          namespace: ngb
          port: 8080
          scheme: http  
    - match: Host(`ngb-gui.nonprod.allanshomelab.com`)
      kind: Rule
      middlewares:
        - name: traefik-custom-headers
          namespace: default
      priority: 10
      services:
        - name: no-geeks-brewing-nextjs-gui
          namespace: ngb
          port: 3000
          scheme: http 
    - match: Host(`longhorn.nonprod.allanshomelab.com`)
      kind: Rule
      middlewares:
        - name: traefik-custom-headers
          namespace: default
      priority: 10
      services:
        - name: longhorn-frontend
          namespace: longhorn-system
          port: 80
          scheme: http   
    - match: Host(`wiki.nonprod.allanshomelab.com`)
      kind: Rule
      middlewares:
        - name: traefik-custom-headers
          namespace: default
      priority: 10
      services:
        - name: wikijs
          namespace: wikijs
          port: 80
          scheme: http 
    - match: Host(`vaultwarden.nonprod.allanshomelab.com`)
      kind: Rule
      middlewares:
        - name: traefik-custom-headers
          namespace: default
      priority: 10
      services:
        - name: vaultwarden
          namespace: vaultwarden
          port: 35550
          scheme: http 
    - match: Host(`nginx.nonprod.allanshomelab.com`)
      kind: Rule
      middlewares:
        - name: traefik-custom-headers
          namespace: default
      priority: 10
      services:
        - name: nginx
          namespace: nginx
          port: 80
          scheme: http  
    - match: Host(`tools.nonprod.allanshomelab.com`)
      kind: Rule
      middlewares:
        - name: traefik-custom-headers
          namespace: default
      priority: 10
      services:
        - name: it-tools
          namespace: it-tools
          port: 80
          scheme: http  
    - match: Host(`portainer.nonprod.allanshomelab.com`)
      kind: Rule
      middlewares:
        - name: traefik-custom-headers
          namespace: default
      priority: 10
      services:
        - name: portainer
          namespace: portainer
          port: 9000
          scheme: http  
    - match: Host(`rancher.nonprod.allanshomelab.com`)
      kind: Rule
      middlewares:
        - name: traefik-custom-headers
          namespace: default
      priority: 10
      services:
        - name: rancher
          namespace: cattle-system
          port: 80
          scheme: http
