kustomizations/traefik/staging/ingress-routes.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik
  namespace:  default
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`argocd.nonprod.allanshomelab.com`)
    kind: Rule
    services:
    - name: argocd-server
      port: 80
